--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,11 @@
 		"streambuf": "cpp",
 		"thread": "cpp",
 		"cinttypes": "cpp",
-		"typeinfo": "cpp"
+		"typeinfo": "cpp",
+		"any": "cpp",
+		"forward_list": "cpp",
+		"optional": "cpp",
+		"iomanip": "cpp",
+		"variant": "cpp"
 	}
 }
