--- a/tests/tests/Sanity/CMakeLists.txt
+++ b/tests/tests/Sanity/CMakeLists.txt
@@ -10,6 +10,8 @@ target_link_libraries(${TEST_NAME} PUBLIC
     test_main
 )
 
+target_compile_features(${TEST_NAME} PRIVATE cxx_std_17)
+
 add_test(
     NAME ${TEST_NAME}
     COMMAND ${TEST_NAME}
