Improved file and directory handling, added remove support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
 		"future": "cpp",
 		"codecvt": "cpp",
 		"valarray": "cpp",
-		"filesystem": "cpp"
+		"filesystem": "cpp",
+		"complex": "cpp"
 	}
 }
