Added debug function failure, so tests can make functions fail

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ if (CMAKE_BUILD_TYPE)
 		enable_testing(true)
 		add_subdirectory(googletest)
 		add_subdirectory(tests)
+		add_definitions(-DDEBUG)
 	endif()
 endif()
 
