--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,8 @@ project(leaftests)
 
 include_directories(../Log/include)
 
+add_definitions(-DDEBUG)
+
 include_directories(
 	../include
 	./include
@@ -12,3 +14,4 @@ add_subdirectory(test_main)
 
 add_subdirectory(tests/Sanity)
 add_subdirectory(tests/Package)
+add_subdirectory(tests/Leafcore)
