Moved Downloader to exception worklfow, created initial tests for Downloader

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,5 +13,8 @@ include_directories(
 add_subdirectory(test_main)
 
 add_subdirectory(tests/Sanity)
+
+add_subdirectory(tests/Downloader)
+
 add_subdirectory(tests/Package)
 add_subdirectory(tests/Leafcore)
