Added PackageListParser::parse() tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ add_subdirectory(tests/Sanity)
 
 add_subdirectory(tests/Downloader)
 add_subdirectory(tests/LeafArchive)
+add_subdirectory(tests/PackageListParser)
 
 add_subdirectory(tests/Package)
 add_subdirectory(tests/Leafcore)
