Added CMake includes for libarchive and libcurl, added static build option (will probably not work)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,15 @@ include_directories(leafcore/include)
 
 set(CMAKE_CXX_STANDARD 17)
 
+option(LEAF_STATIC "Build a static version of leaf" OFF)
+
+if (LEAF_STATIC)
+	message("Building a static leaf executable!")
+	set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+	set(BUILD_SHARED_LIBS OFF)
+	set(CMAKE_EXE_LINKER_FLAGS "-static")
+endif()
+
 if (CMAKE_BUILD_TYPE)
 	if (CMAKE_BUILD_TYPE MATCHES Debug)
 		enable_testing(true)
@@ -14,11 +23,6 @@ if (CMAKE_BUILD_TYPE)
 		add_subdirectory(tests)
 		add_definitions(-DDEBUG)
 	endif()
-endif()
-
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	message("Using macOS include path for libarchive, use \"brew install libarchive\" to install it")
-	include_directories(/opt/homebrew/opt/libarchive/include)
 endif()
 
 add_subdirectory(leafcore)
