Modified CMakeLists for static build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,8 @@ option(LEAF_STATIC "Build a static version of leaf" OFF)
 
 if (LEAF_STATIC)
 	message("Building a static leaf executable!")
-	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -static)
-	set(CMAKE_C_FLAGS ${CMAKE_CXX_FLAGS} -static)
 	set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 	set(BUILD_SHARED_LIBS OFF)
-	set(CMAKE_EXE_LINKER_FLAGS "-static")
 endif()
 
 if (CMAKE_BUILD_TYPE)
@@ -32,9 +29,6 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	set (LibArchive_INCLUDE_DIR /opt/homebrew/opt/libarchive/include)
 endif()
 
-find_package(CURL REQUIRED)
-find_package(LibArchive REQUIRED)
-
 add_subdirectory(leafcore)
 
 add_subdirectory(Log)
@@ -46,6 +40,6 @@ file (GLOB_RECURSE CXXSOURCES "src/**.cpp")
 file (GLOB_RECURSE HEADERS "include/**.h")
 
 add_executable(${PNAME} ${HEADERS} ${CXXSOURCES})
-target_link_libraries(${PNAME} log leafcore ${CURL_LIBRARIES} ${LibArchive_LIBRARIES})
-
+target_link_libraries(${PNAME} log leafcore)
+target_link_options(${PNAME} PRIVATE -static)
 install (TARGETS ${PNAME} RUNTIME DESTINATION /usr/bin)
