Using the googletest repo of Log instead of pulling an own instance for leaf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ option(LEAF_STATIC "Build a static version of leaf" OFF)
 if (CMAKE_BUILD_TYPE)
 	if (CMAKE_BUILD_TYPE MATCHES Debug)
 		enable_testing(true)
-		add_subdirectory(googletest)
+		add_subdirectory(Log/googletest)
 		add_subdirectory(tests)
 		add_definitions(-DDEBUG)
 	endif()
