Added seperate switch to CMakeLists.txt for building tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 option(LEAF_STATIC "Build a static version of leaf" OFF)
+option(BUILD_DOCS "Build the documentation for leafcore" OFF)
+option(BUILD_TESTS "Build the test suite" OFF)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	message("Using macOS include path for libarchive, use \"brew install libarchive\" to install it")
@@ -32,13 +34,12 @@ include_directories(include)
 include_directories(args)
 include_directories(leafcore/include)
 
-if (CMAKE_BUILD_TYPE)
-	if (CMAKE_BUILD_TYPE MATCHES Debug)
-		enable_testing(true)
-		add_subdirectory(Log/googletest)
-		add_subdirectory(tests)
-		add_definitions(-DDEBUG)
-	endif()
+
+if (BUILD_TESTS)
+	enable_testing(true)
+	add_subdirectory(Log/googletest)
+	add_subdirectory(tests)
+	add_definitions(-DDEBUG)
 endif()
 
 add_subdirectory(leafcore)
