--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ add_subdirectory(tests/Sanity)
 add_subdirectory(tests/Downloader)
 add_subdirectory(tests/LeafArchive)
 add_subdirectory(tests/PackageListParser)
-add_subdirectory(tests/ConfigParser)
+add_subdirectory(tests/Parser)
 
 add_subdirectory(tests/Package)
 add_subdirectory(tests/Leafcore)
