--- a/.github/workflows/cmake_main.yml
+++ b/.github/workflows/cmake_main.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Install dependencies
       run: sudo apt-get install -y libcurl3-gnutls-dev libarchive-dev
 
+    - name: Prepare googletest
+      run: cd Log && ./prepare_tests.sh && cd ..
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
