--- a/.github/workflows/cmake_main.yml
+++ b/.github/workflows/cmake_main.yml
@@ -18,7 +18,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Clone repo
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
     - name: Install dependencies
       run: sudo apt-get install -y libcurl3-gnutls-dev libarchive-dev
