--- a/.github/workflows/cmake_dev.yml
+++ b/.github/workflows/cmake_dev.yml
@@ -18,10 +18,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Clone repo
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
 
     - name: Install dependencies
       run: sudo apt-get install -y libcurl3-gnutls libarchive-dev
+
+    - name: Prepare googletest
+      run: cd Log && ./prepare_tests.sh && cd ..
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
