--- a/leafcore/CMakeLists.txt
+++ b/leafcore/CMakeLists.txt
@@ -73,9 +73,18 @@ file (GLOB_RECURSE CXXSOURCES "src/**.cpp")
 file (GLOB_RECURSE HEADERS "include/**.h")
 
 if (LEAF_STATIC)
-	message("Building a static leaf executable!")
+	message("[Leaf] Building a static leaf executable!")
 	set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
 	set(BUILD_SHARED_LIBS OFF)
+endif()
+
+if (LEAF_NONCURSES)
+	message("[Leaf] Disabled ncurses support")	
+else()
+	message("[Leaf] Building leafcore with ncurses support")
+	find_package(Curses REQUIRED)
+	set(LEAFCORE_LIBRARIES ${LEAFCORE_LIBRARIES} ${CURSES_LIBRARIES})
+	add_definitions(-DLEAF_NCURSES)
 endif()
 
 if (LEAF_STATIC)
