Added new nlohmann/json submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = args
 	url = https://github.com/Taywee/args
 	shallow = true
+[submodule "json"]
+	path = json
+	url = https://github.com/nlohmann/json
