--- a/.github/workflows/cmake_dev.yml
+++ b/.github/workflows/cmake_dev.yml
@@ -24,7 +24,7 @@ jobs:
         submodules: recursive
 
     - name: Install dependencies
-      run: sudo apt-get install -y libcurl3-gnutls-dev libarchive-dev
+      run: sudo apt-get update -y && sudo apt-get install -y libcurl3-gnutls-dev libarchive-dev
 
     - name: Prepare googletest
       run: cd Log && ./prepare_tests.sh && cd ..
